# csc376f23

./: Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml
csc376_root/: set_env_variable.sh
csc376_root/csc376-assignment0/: CMakeLists.txt  csc376_assignment.world  main.cpp
csc376_root/csc376-assignment0/include/: gazebocontroller.h  panda_control_plugin.h  pandarobotmodel.h
csc376_root/csc376-assignment0/src/: gazebocontroller.cpp  panda_control_plugin.cpp  pandarobotmodel.cpp
csc376_root/models/: custom.material
csc376_root/models/panda_arm/: model.config  model.sdf
env_files/: bash_profile
